--- a/index.html
+++ b/index.html
@@ -3,24 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>guaranteed-inquiry-paywall</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>FASTPASS - Get Paid to Respond</title>
+    <meta name="description" content="Premium contact platform for busy professionals. Get paid to respond to messages with guaranteed response times." />
+    <meta name="author" content="FASTPASS" />
 
-    <meta property="og:title" content="guaranteed-inquiry-paywall" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="FASTPASS - Get Paid to Respond" />
+    <meta property="og:description" content="Premium contact platform for busy professionals. Get paid to respond to messages with guaranteed response times." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="FASTPASS - Get Paid to Respond" />
+    <meta name="twitter:description" content="Premium contact platform for busy professionals." />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
